# 3dscanning

./: .gitignore  CMakeLists.txt  CameraTrajectory.txt
Examples/RGB-D/: CameraTrajectory.txt  R200.yaml  TUM1.yaml  rgbd_realsense.cpp  rgbd_tum.cc
Examples/RGB-D/result_0/: pc_0.pcd
include/: BridgeRSR200.h  Frame.h  FrameSelector.h  KeyFrame.h  Matrix.h  MeshGenerator.h  OccupancyGrid.h  Octree.h  PointModelDrawer.h  SE3.h  Segmentation.h  System.h  Tracking.h  Viewer.h  Viz.h
src/: BridgeRSR200.cpp  Frame.cc  FrameSelector.cpp  KeyFrame.cc  LocalMapping.cc  MeshGenerator.cpp  OccupancyGrid.cpp  Octree.cpp  PointModelDrawer.cpp  System.cc  Tracking.cc  Viewer.cc
